Added Pixelsuchties functions